--- a/Freews/pom.xml
+++ b/Freews/pom.xml
@@ -21,13 +21,14 @@
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-core</artifactId>
-			<version>2.3.4.1</version>
+			<version>2.3.12</version>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-dojo-plugin</artifactId>
 			<version>2.3.4</version>
-		</dependency>
+		</dependency> -->
 
 		<!-- Servlet dependencies -->
 		<dependency>
